--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^15.4",
     "react-dom": "^15.4",
+    "react-router-dom": "^4.2.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
