--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.4",
     "react-dom": "^15.4",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
